--- a/index.html
+++ b/index.html
@@ -23,17 +23,13 @@
       <p style="font-size: 22px;">Model is trained to identify the following objects: </p>
 
       <b class="name_of_objects">
-        Watch
+        Me
         <hr>
-        Dice
+        Sister
         <hr>
-        Container
+        Mother
         <hr>
-        Massager
-        <hr>
-        Wifi
-        <hr>
-        Sanitizer
+        Father
         <hr>
         </b>
         
